@@ -1,3 +1,6 @@
+15.aug (la)
+      - fix #6658: Natural in every keysig on mac PPC
+      - fix #6508: Crash removing instrument with volta 
 10.aug (ws)
       - fix repeat command (ctrl+r) for staves > 1
 6.aug (ws)
